fix: spacing between fields

--- a/packages/core/src/sass/app/_common/components/account-common.scss
+++ b/packages/core/src/sass/app/_common/components/account-common.scss
@@ -856,7 +856,9 @@
 
     &__mismatch-container {
         .idv-form {
+            @include desktop{
             margin-bottom: 1.6rem;
+            }
         }
 
         .proof-of-identity__submit-button {
